@@ -57,7 +57,7 @@ libweather_home_la_SOURCES = weather-home.c \
 libweather_home_la_CFLAGS = $(GTK_CFLAGS) $(OSSO_CFLAGS) $(LIBXML2_CFLAGS) $(GNOME_VFS_CFLAGS) \
 			    $(GCONF_CFLAGS) $(CONIC_CFLAGS) $(DBUS_CFLAGS) $(HILDONDESKTOP_CFLAGS) \
 			    $(DESKTOP_CFLAGS) $(OSSOIC_CFLAGS) $(LOCATION_CFLAGS) $(LIBOSSOHELP_CFLAGS) \
-			    -Wall -pedantic -Wmissing-prototypes
+			    -Wall -pedantic -Wmissing-prototypes -DDISPLAY_BUILD
 
 libweather_home_la_LDFLAGS =  -module -avoid-version 
 
