@@ -78,7 +78,6 @@ extern time_t last_update_time(GSList *object);
 extern float convert_wind_units(int to, float value);
 extern void initial_gps_connect(void);
 /*******************************************************************************/
-extern int	boxs_offset[];
 extern gchar	path_large_icon[];
 /*******************************************************************************/
 typedef struct _HomeAppletHandler HomeAppletHandler;
